# discord-bot-rs

./: Cargo.toml  README.md
etc/init.d/: yabd
src/: bot.rs  gateway.rs  main.rs  rest.rs  ws.rs
