[package]
name = "yab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1.12"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "io-std"] }
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
url = "2.3.1"
